frontend/kubernetes/react-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
  namespace: lang
spec:
  type: NodePort
  selector:
    app: react
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 32000
      # protocol: TCP
