frontend/kubernetes/react-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-ingress
  namespace: lang
spec:
  rules:
    - host: react.lang.local
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 3000
            path: /
